HelloUltraviolet/Fixtures/RejectedSource/Keys/ConflictDetectionDiagnostic/Source/Main.uv
//! Rejected key-system specimen for conflict-detection diagnostic table coverage.

public procedure conflictDetectionDiagnosticReference() -> i32 {
    var shared_value: shared i32 = 1
    shared_value = shared_value + 1
    return 0
}
